--- a/news.html
+++ b/news.html
@@ -2,39 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Новости" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style_mob.css" />
-    <title>Новости АМК</title>
+    <meta name="description" content="Новости АМК">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style_mob.css" />
+    <title>Новости</title>
   </head>
   <body>
-    <!-- меню  -->
+    <!-- МЕНЮ  -->
     <header>
       <div class="logo">
         <img src="./img/Vector.png" alt="#" />
-        <p><a href="http://127.0.0.1:5500/main.html"> Альметьевский многопрофильный колледж</a></p>
+        <p><a href="index.html"> Альметьевский многопрофильный колледж</a></p>
       </div>
+      <div class="burger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
       <nav>
         <ul class="main-menu">
           <li class="dropdown">
             <a href="#">Об обучении</a>
             <ul class="dropdown-menu">
-              <li><a href="#">Абитуриентам</a></li>
+              <li><a href="abiturientam.html">Абитуриентам</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#">Сведения о колледже</a>
             <ul class="dropdown-menu">
-              <li><a href="#">О нас</a></li>
-              <li>
-                <a href="http://127.0.0.1:5500/ped_sostav.html"
-                  >Педагогический состав</a
-                >
-              </li>
+              <li><a href="about_us.html">О нас</a></li>
+              <li><a href="ped_sostav.html">Педагогический состав</a></li>
             </ul>
           </li>
-          <li><a href="http://127.0.0.1:5500/news.html">Новости</a></li>
-          <li><a href="http://127.0.0.1:5500/raspisanie.html">Расписание</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="raspisanie.html">Расписание</a></li>
           <li><button class="login-btn">Вход</button></li>
         </ul>
       </nav>
@@ -46,7 +49,11 @@
         <div class="card_news">
           <img src="./img/news1.png" alt="" />
           <div class="card_news_text">
-            <h5>"День открытых дверей - 2024: знакомство с колледжем"</h5>
+            <h5>
+              <font color="#10218D"
+                >"День открытых дверей - 2024: знакомство с колледжем"</font
+              >
+            </h5>
             <p>
               Альметьевский многопрофильный колледж приглашает абитуриентов и их
               родителей на традиционный День открытых дверей! В программе:
@@ -54,18 +61,27 @@
               мастер-классы от преподавателей и студентов. Узнайте о новых
               образовательных программах и условиях поступления из первых рук!
             </p>
-            <p>15 мая 2024</p>
+            <p> <font color="#10218D">15 мая 2024</font></p>
           </div>
         </div>
 
         <div class="card_news">
           <img src="./img/news2.png" alt="" />
           <div class="card_news_text">
-            <h5>Наши студенты - победители регионального чемпионата “Профессионалы”</h5>
+            <h5>
+              <font color="#10218D"
+                >Наши студенты - победители регионального чемпионата
+                “Профессионалы”</font
+              >
+            </h5>
             <p>
-              Команда Альметьевского многопрофильного колледжа заняла 3 призовых места на  региональном этапе чемпионата профессионального мастерства. Особые  успехи показали студенты по компетенциям "Веб-дизайн", "Электромонтаж" и "Поварское дело". Поздравляем победителей и их наставников!
+              Команда Альметьевского многопрофильного колледжа заняла 3 призовых
+              места на региональном этапе чемпионата профессионального
+              мастерства. Особые успехи показали студенты по компетенциям
+              "Веб-дизайн", "Электромонтаж" и "Поварское дело". Поздравляем
+              победителей и их наставников!
             </p>
-            <p>10 апреля 2024</p>
+            <p> <font color="#10218D">10 апреля 2024</font></p>
           </div>
         </div>
 
@@ -73,19 +89,24 @@
           <img src="./img/news3.png" alt="" />
           <div class="card_news_text">
             <h5>
-              Студенческая весна - 2024: творческие победы
+              <font color="#10218D"
+                >Студенческая весна - 2024: творческие победы</font
+              >
             </h5>
             <p>
-              Творческие коллективы колледжа завоевали Гран-при на городском фестивале  "Студенческая весна" в номинациях "Вокальное искусство" и "Современная  хореография". В этом году в наших выступлениях приняли участие рекордные 120 студентов!
+              Творческие коллективы колледжа завоевали Гран-при на городском
+              фестивале "Студенческая весна" в номинациях "Вокальное искусство"
+              и "Современная хореография". В этом году в наших выступлениях
+              приняли участие рекордные 120 студентов!
             </p>
-            <p>22 марта 2024</p>
+            <p> <font color="#10218D">22 марта 2024</font></p>
           </div>
         </div>
 
         <div class="card_news">
           <img src="./img/news4.png" alt="" />
           <div class="card_news_text">
-            <h5>Модернизация учебных мастерских</h5>
+            <h5> <font color="#10218D">Модернизация учебных мастерских</font></h5>
             <p>
               Благодаря участию в федеральной программе "Профессионалитет" в
               колледже завершено оснащение современных мастерских для
@@ -93,7 +114,7 @@
               Теперь студенты будут обучаться на оборудовании последнего
               поколения.
             </p>
-            <p>5 февраля 2024</p>
+            <p> <font color="#10218D">5 февраля 2024</font></p>
           </div>
         </div>
       </section>
@@ -116,12 +137,30 @@
         </div>
       </div>
       <div class="stick">
-        <img src="./img/Rectangle 14.png" alt="" />
+
       </div>
       <div class="end">
         <p>Гапоу “Альметьевский многопрофильный колледж”</p>
       </div>
     </footer>
+    <!-- Модальное окно для входа -->
+    <div id="loginModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Вход в личный кабинет</h2>
+        <form class="login-form">
+          <div class="form-group">
+            <label for="login-username">Логин</label>
+            <input type="text" id="login-username" placeholder="Введите ваш логин" required>
+          </div>
+          <div class="form-group">
+            <label for="login-password">Пароль</label>
+            <input type="password" id="login-password" placeholder="Введите пароль" required>
+          </div>
+          <button type="submit" class="submit-btn">Войти</button>
+        </form>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
