--- a/ped_sostav.html
+++ b/ped_sostav.html
@@ -2,35 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Педагогический состав" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style_mob.css" />
-    <title>Педагогический состав АМК</title>
+    <meta name="description" content="Педагогический состав АМК">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style_mob.css" />
+    <title>Педагогический состав</title>
   </head>
   <body>
-    <!-- меню  -->
+    <!-- МЕНЮ  -->
     <header>
       <div class="logo">
         <img src="./img/Vector.png" alt="#" />
-        <p><a href="http://127.0.0.1:5500/main.html">Альметьевский многопрофильный колледж</a></p>
+        <p><a href="index.html"> Альметьевский многопрофильный колледж</a></p>
       </div>
+      <div class="burger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
       <nav>
         <ul class="main-menu">
           <li class="dropdown">
             <a href="#">Об обучении</a>
             <ul class="dropdown-menu">
-              <li><a href="#">Абитуриентам</a></li>
+              <li><a href="abiturientam.html">Абитуриентам</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#">Сведения о колледже</a>
             <ul class="dropdown-menu">
-              <li><a href="#">О нас</a></li>
-              <li><a href="http://127.0.0.1:5500/ped_sostav.html">Педагогический состав</a></li>
+              <li><a href="about_us.html">О нас</a></li>
+              <li><a href="ped_sostav.html">Педагогический состав</a></li>
             </ul>
           </li>
-          <li><a href="http://127.0.0.1:5500/news.html">Новости</a></li>
-          <li><a href="http://127.0.0.1:5500/raspisanie.html">Расписание</a></li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="raspisanie.html">Расписание</a></li>
           <li><button class="login-btn">Вход</button></li>
         </ul>
       </nav>
@@ -39,79 +46,83 @@
     <div class="container">
       <h1>Педагогический состав</h1>
       <section class="yellow_ped">
-
-          <div class="card_ped">
-            <img src="./img/man1.png" alt="" />
-            <div class="card_ped_text">
-              <h5>Иванов Иван Иванович</h5>
-              <p>Должность: Директор</p>
-              <p>Образование: Высшее, кандидат педагогических наук</p>
-              <p>
-                Опыт работы: 20 лет в образовании, из них 5 лет на руководящих
-                должностях
-              </p>
-              <p>
-                Ответственность: Руководство колледжем, стратегическое развитие
-              </p>
-            </div>
+        <div class="card_ped">
+          <img src="./img/man1.png" alt="" />
+          <div class="card_ped_text">
+            <h5><font color="#10218D">Иванов Иван Иванович</font></h5>
+            <p>Должность: Директор</p>
+            <p>Образование: Высшее, кандидат педагогических наук</p>
+            <p>
+              Опыт работы: 20 лет в образовании, из них 5 лет на руководящих
+              должностях
+            </p>
+            <p>
+              Ответственность: Руководство колледжем, стратегическое развитие
+            </p>
           </div>
+        </div>
 
-          <div class="card_ped">
-            <img src="./img/wman1.png" alt="" />
-            <div class="card_ped_text">
-              <h5>Николаева Елена Сергеевна </h5>
-              <p>Должность: Заместитель директора по учебной работе</p>
-              <p>Образование: Высшее, магистр педагогики</p>
-              <p>
-                Опыт работы: 10 лет в образовании, из них 3 года на руководящих должностях
-              </p>
-              <p>
-                Ответственность: Управление учебным процессом, контроль качества образования              </p>
-            </div>
+        <div class="card_ped">
+          <img src="./img/wman1.png" alt="" />
+          <div class="card_ped_text">
+            <h5><font color="#10218D">Николаева Елена Сергеевна</font></h5>
+            <p>Должность: Заместитель директора по учебной работе</p>
+            <p>Образование: Высшее, магистр педагогики</p>
+            <p>
+              Опыт работы: 10 лет в образовании, из них 3 года на руководящих
+              должностях
+            </p>
+            <p>
+              Ответственность: Управление учебным процессом, контроль качества
+              образования
+            </p>
           </div>
+        </div>
 
-          <div class="card_ped">
-            <img src="./img/wman2.png" alt="" />
-            <div class="card_ped_text">
-              <h5>Хафизова Юлия Викторовна  </h5>
-              <p>Должность: Педагог-психолог</p>
-              <p>Образование: Высшее, магистр психологии</p>
-              <p>
-                Опыт работы: 5 лет в образовании
-              </p>
-              <p>
-                Ответственность: Психологическое консультирование студентов, поддержка социально-психологического сопровождения</p>
-            </div>
+        <div class="card_ped">
+          <img src="./img/wman2.png" alt="" />
+          <div class="card_ped_text">
+            <h5><font color="#10218D">Хафизова Юлия Викторовна</font></h5>
+            <p>Должность: Педагог-психолог</p>
+            <p>Образование: Высшее, магистр психологии</p>
+            <p>Опыт работы: 5 лет в образовании</p>
+            <p>
+              Ответственность: Психологическое консультирование студентов,
+              поддержка социально-психологического сопровождения
+            </p>
           </div>
+        </div>
 
-          <div class="card_ped">
-            <img src="./img/man2.png" alt="" />
-            <div class="card_ped_text">
-              <h5>Соколов Александр Николаевич  </h5>
-              <p>Должность: Мастер Производственного Обучения</p>
-              <p>Образование: Среднее профессиональное, мастер производственного обучения</p>
-              <p>
-                Опыт работы: 10 лет в производственном обучении
-              </p>
-              <p>
-                Ответственность: Организация и проведение производственной практики, обучение студентов практическим навыкам              </p>
-            </div>
+        <div class="card_ped">
+          <img src="./img/man2.png" alt="" />
+          <div class="card_ped_text">
+            <h5><font color="#10218D">Соколов Александр Николаевич</font></h5>
+            <p>Должность: Мастер Производственного Обучения</p>
+            <p>
+              Образование: Среднее профессиональное, мастер производственного
+              обучения
+            </p>
+            <p>Опыт работы: 10 лет в производственном обучении</p>
+            <p>
+              Ответственность: Организация и проведение производственной
+              практики, обучение студентов практическим навыкам
+            </p>
           </div>
+        </div>
 
-          <div class="card_ped">
-            <img src="./img/wman3.png" alt="" />
-            <div class="card_ped_text">
-              <h5>Смирнова Анна Владимировна  </h5>
-              <p>Должность: Преподаватель Информатики</p>
-              <p>Образование: Высшее, магистр информатики</p>
-              <p>
-                Опыт работы: 6 лет в образовании
-              </p>
-              <p>
-                Ответственность: Преподавание информатики, разработка образовательных программ              </p>
-            </div>
+        <div class="card_ped">
+          <img src="./img/wman3.png" alt="" />
+          <div class="card_ped_text">
+            <h5><font color="#10218D">Смирнова Анна Владимировна</font></h5>
+            <p>Должность: Преподаватель Информатики</p>
+            <p>Образование: Высшее, магистр информатики</p>
+            <p>Опыт работы: 6 лет в образовании</p>
+            <p>
+              Ответственность: Преподавание информатики, разработка
+              образовательных программ
+            </p>
           </div>
-
+        </div>
       </section>
     </div>
 
@@ -132,12 +143,29 @@
         </div>
       </div>
       <div class="stick">
-        <img src="./img/Rectangle 14.png" alt="" />
       </div>
       <div class="end">
         <p>Гапоу “Альметьевский многопрофильный колледж”</p>
       </div>
     </footer>
+    <!-- Модальное окно для входа -->
+    <div id="loginModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Вход в личный кабинет</h2>
+        <form class="login-form">
+          <div class="form-group">
+            <label for="login-username">Логин</label>
+            <input type="text" id="login-username" placeholder="Введите ваш логин" required>
+          </div>
+          <div class="form-group">
+            <label for="login-password">Пароль</label>
+            <input type="password" id="login-password" placeholder="Введите пароль" required>
+          </div>
+          <button type="submit" class="submit-btn">Войти</button>
+        </form>
+      </div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
