--- a/raspisanie.html
+++ b/raspisanie.html
@@ -1,46 +1,43 @@
-<!DOCTYPE html>
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Расписание" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="style_mob.css" />
+    <meta name="description" content="Расписание АМК">
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style_mob.css" />
     <title>Расписание</title>
   </head>
   <body>
     <!-- МЕНЮ  -->
     <header>
       <div class="logo">
-        <img src="./img/Vector.png" alt="#" />
-        <p>
-          <a href="http://127.0.0.1:5500/main.html">
-            Альметьевский многопрофильный колледж</a
-          >
-        </p>
+        <img src="./img/Vector.png" alt="#" >
+        <p><a href="index.html"> Альметьевский многопрофильный колледж</a></p>
       </div>
+      <div class="burger-btn">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
       <nav>
         <ul class="main-menu">
           <li class="dropdown">
             <a href="#">Об обучении</a>
             <ul class="dropdown-menu">
-              <li><a href="#">Абитуриентам</a></li>
+              <li><a href="abiturientam.html">Абитуриентам</a></li>
             </ul>
           </li>
           <li class="dropdown">
             <a href="#">Сведения о колледже</a>
             <ul class="dropdown-menu">
-              <li><a href="#">О нас</a></li>
-              <li>
-                <a href="http://127.0.0.1:5500/ped_sostav.html"
-                  >Педагогический состав</a
-                >
-              </li>
+              <li><a href="about_us.html">О нас</a></li>
+              <li><a href="ped_sostav.html">Педагогический состав</a></li>
             </ul>
           </li>
-          <li><a href="http://127.0.0.1:5500/news.html">Новости</a></li>
-          <li>
-            <a href="http://127.0.0.1:5500/raspisanie.html">Расписание</a>
-          </li>
+          <li><a href="news.html">Новости</a></li>
+          <li><a href="raspisanie.html">Расписание</a></li>
           <li><button class="login-btn">Вход</button></li>
         </ul>
       </nav>
@@ -69,26 +66,26 @@
     <section class="raspisanie_is-21">
       <h2>Расписание занятий группы ис-21</h2>
       <div class="date">
-        <p>Четверг <br /></p>
-        <p>10 апреля 2024</p>
+        <p> <font color="#10218D">Четверг</font> <br /></p>
+        <p> <font color="#10218D">10 апреля 2024</font></p>
       </div>
       <div class="yellow_raspisanie">
         <div class="para">
           <p>1 пара</p>
           <p>8:00 - 9:30</p>
-          <p>Иностранный язык в профессиональной деятельности</p>
+          <p> <font color="#10218D">Иностранный язык в профессиональной деятельности</font></p>
           <img src="./img/stickk.png" alt="" />
         </div>
         <div class="para">
           <p>2 пара</p>
           <p>9:40-11:10</p>
-          <p>Теория вероятностей и математическая статистика</p>
+          <p> <font color="#10218D">Теория вероятностей и математическая статистика</font></p>
           <img src="./img/stickk.png" alt="" />
         </div>
         <div class="para">
           <p>3 пара</p>
           <p>11:40-13:10</p>
-          <p>Операционные системы и среды</p>
+          <p> <font color="#10218D">Операционные системы и среды</font></p>
         </div>
       </div>
     </section>
@@ -110,12 +107,29 @@
         </div>
       </div>
       <div class="stick">
-        <img src="./img/Rectangle 14.png" alt="" />
       </div>
       <div class="end">
         <p>Гапоу “Альметьевский многопрофильный колледж”</p>
       </div>
     </footer>
+    <!-- Модальное окно для входа -->
+<div id="loginModal" class="modal">
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h2>Вход в личный кабинет</h2>
+    <form class="login-form">
+      <div class="form-group">
+        <label for="login-username">Логин</label>
+        <input type="text" id="login-username" placeholder="Введите ваш логин" required>
+      </div>
+      <div class="form-group">
+        <label for="login-password">Пароль</label>
+        <input type="password" id="login-password" placeholder="Введите пароль" required>
+      </div>
+      <button type="submit" class="submit-btn">Войти</button>
+    </form>
+  </div>
+</div>
     <script src="script.js"></script>
   </body>
 </html>
