--- a/news.html
+++ b/news.html
@@ -44,7 +44,7 @@
     </header>
 
     <div class="container">
-      <h1>Новости</h1>
+      <h1 class="h1_news">Новости</h1>
       <section class="yellow_news">
         <div class="card_news">
           <img src="./img/news1.png" alt="" />
