--- a/ped_sostav.html
+++ b/ped_sostav.html
@@ -44,7 +44,7 @@
     </header>
 
     <div class="container">
-      <h1>Педагогический состав</h1>
+      <h1 class="h1_ped">Педагогический состав</h1>
       <section class="yellow_ped">
         <div class="card_ped">
           <img src="./img/man1.png" alt="" />
